# SolarGPU

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: barle_compression.h  cuda_utils.cuh  geotiff_io.h  heightmap.h  pipeline_constants.h  pipeline_math_constants.h  sky_bins.h  solar_gpu_api.h  sun_position.h  voxel_types.h  voxelization.h
include/cuda/: device_globals.cuh  gpu_memory_budget.cuh  gpu_timing.cuh  viewshed_stage.cuh
include/cuda/kernels/: reflection_kernels.cuh  solar_kernel.cuh  viewshed_kernels.cuh
src/: barle_compression.cpp  geotiff_io.cpp  heightmap.cpp  main.cpp  sky_bins.cpp  voxelization.cpp
src/cuda/: device_globals.cu  gpu_irradiance_compressed.cu  gpu_irradiance_uncompressed.cu
src/cuda/kernels/: reflection_kernels.cu  solar_kernel.cu  viewshed_kernels.cu
test_data/: dsm_heightmap.tiff  tmy_diffuse.txt  tmy_direct.txt
